# solana_go

./: README.md
solvestor_app/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
solvestor_app/docs/: implementation_plan.md  task.md  walkthrough.md
solvestor_app/src/: App.tsx  index.css  main.tsx
solvestor_app/src/anchor/: setup.ts
solvestor_app/src/config/: boardTiles.ts  game.ts  onChainConstants.ts  players.ts  theme.ts  tiles.ts
solvestor_app/src/engine/: tileActionMirror.ts
solvestor_app/src/hooks/: useAutoEndTurn.ts  useCPUPlayer.ts  useCoinConfetti.ts  useDiceRoll.ts  useGameActions.ts  useRemotePlayerSync.ts  useSessionKey.ts  useSoundManager.ts  useTileActions.ts  (+1 more)
solvestor_mobile/: app.json  index.ts  package-lock.json  package.json  tsconfig.json
solvestor_mobile/app/: _layout.tsx  index.tsx  lobby.tsx  select.tsx
solvestor_program/: .env  .gitignore  Anchor.toml  README.md  package.json  player2-keypair.json  player2_keypair.json
solvestor_program/docs/: implementation_plan.md  test_plan.md  walkthrough.md
solvestor_program/programs/solvestor_program/: Cargo.toml
solvestor_program/programs/solvestor_program/src/: constants.rs  errors.rs  lib.rs  state.rs
solvestor_program/programs/solvestor_program/src/instructions/: buy_property.rs  create_room.rs  delegate.rs  end_game.rs  join_room.rs  leave_room.rs  mod.rs  pay_rent.rs  perform_tile_action.rs  roll_dice.rs  settle_game.rs  start_game.rs
solvestor_program/tests/: solvestor_program.ts
solvestor_program/utils/: initializeKeypair.ts
(+69 files in other folders)
